<resources>
    <string name="app_name">PharmacyApp</string>

    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_store">Store</string>
    <string name="bottom_navigation_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_text_btn">login</string>
    <string name="forget_password_text_btn">forget password</string>
    <string name="confirm_text_btn">confirm</string>
    <string name="firstname_text_hint_required">Firstname</string>
    <string name="lastname_text_hint_required">Lastname</string>
    <string name="sign_up_text_btn">sign up</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="phone_empty_error">Enter Your Phone Number</string>
    <string name="password_empty_error">Enter Your Password</string>
    <string name="national_number">National Number</string>
    <string name="insurance_number">Insurance Number</string>
    <string name="insurance_name">Insurance Name</string>
    <string name="astrix"><font color='#FF0000'>*</font></string>
    <string name="confirm">Confirm</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="firstname_empty_error">Enter Your First Name</string>
    <string name="lastname_empty_error">Enter Your Last Name</string>
    <string name="national_number_empty_error">Enter Your National Number</string>
    <string name="add_password_empty_error">Enter A Password</string>
    <string name="confirm_name_empty_error">Enter Your Password Again</string>
    <string name="password_match_error">Your Passwords Don\'t Match</string>
    <string name="password_length_error">Password Should Be 8 characters or more</string>
    <string name="category_list_item_description_text">category list item description</string>
    <string name="categories_label_text">دسته بندی دارو ها</string>
    <string name="more_text">بیشتر</string>
    <string name="more_option_icon_description">more option icon description</string>
    <string name="top_sellers_text_label">دارو های پرفروش</string>
    <string name="non_meds_text_label">دسته بندی دارو های بدون نسخه</string>
    <string name="medicine_list_item_description">medicine list item description</string>
    <string name="search_text">Search</string>
    <string name="no_user_founded">No User With This Phone Number Founded</string>
    <string name="set_new_password">Set New Password</string>
    <string name="new_password">New Password</string>
    <string name="login_credential_error">Your Phone Number Or Password Is Not Correct!</string>
    <string name="item_background_description">item background description</string>
    <string name="user_not_found">User Not Found</string>
    <string name="medicine_images_desc">medicine images</string>

    <!--  medicine description test text  -->
    <string name="description_text_title">Description</string>
    <string name="description_text">
        Medicine is the science[1] and practice[2] of caring for a patient, managing the diagnosis, prognosis, prevention, treatment, palliation of their injury or disease, and promoting their health. Medicine encompasses a variety of health care practices evolved to maintain and restore health by the prevention and treatment of illness. Contemporary medicine applies biomedical sciences, biomedical research, genetics, and medical technology to diagnose, treat, and prevent injury and disease, typically through pharmaceuticals or surgery, but also through therapies as diverse as psychotherapy, external splints and traction, medical devices, biologics, and ionizing radiation, amongst others.[3]

Medicine has been practiced since prehistoric times, during most of which it was an art (an area of skill and knowledge) frequently having connections to the religious and philosophical beliefs of local culture. For example, a medicine man would apply herbs and say prayers for healing, or an ancient philosopher and physician would apply bloodletting according to the theories of humorism. In recent centuries, since the advent of modern science, most medicine has become a combination of art and science (both basic and applied, under the umbrella of medical science). While stitching technique for sutures is an art learned through practice, the knowledge of what happens at the cellular and molecular level in the tissues being stitched arises through science.

Prescientific forms of medicine are now known as traditional medicine or folk medicine, which remains commonly used in the absence of scientific medicine, and are thus called alternative medicine. Alternative treatments outside of scientific medicine having safety and efficacy concerns are termed quackery.
    </string>
    <string name="row_item_image_desc">row item image</string>
    <string name="stock_icon_desc">stock icon</string>
    <string name="price_icon_desc">price icon</string>
    <string name="top_sellers_nonmedicine_text">پرفروش ترین دارو های بدون نسخه</string>
    <string name="price_text_title">Price</string>
    <string name="medicine_name_text_title">medicine name</string>
    <string name="prescription_icon_desc">prescription icon desc</string>
    <string name="add_to_card_text">اضافه به سبد خرید</string>
    <string name="user_information_text">اطلاعات حساب کاربری</string>
    <string name="cart_text">سبد خرید</string>
</resources>