<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="nonMedicine"
            type="com.example.pharmacyapp.model.NonMedicine" />

        <variable
            name="clickListener"
            type="com.example.pharmacyapp.util.clicklistener.NonMedicineListener" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="8dp"
        android:onClick="@{() -> clickListener.onclick(nonMedicine)}"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rv_row_item_background">

            <androidx.cardview.widget.CardView
                android:id="@+id/nonMedicine_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="20dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/row_item_image_desc"
                    android:scaleType="fitXY"
                    app:imageUrl="@{nonMedicine.imageUri}"
                    tools:src="@drawable/background_item_first" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nonMedicine_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@{nonMedicine.name}"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/stock_icon_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/nonMedicine_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="استامینوفن" />

            <ImageView
                android:id="@+id/stock_icon_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/stock_icon_desc"
                android:src="@drawable/ic_stock"
                app:layout_constraintBottom_toTopOf="@+id/price_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nonMedicine_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/stock_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/stock_icon_image"
                app:layout_constraintEnd_toStartOf="@id/stock_icon_image"
                app:layout_constraintTop_toTopOf="@id/stock_icon_image"
                app:stockText="@{nonMedicine.stock}"
                tools:text="موجود در انبار" />

            <ImageView
                android:id="@+id/price_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/price_icon_desc"
                android:src="@drawable/ic_price"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stock_icon_image" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/price_icon"
                app:layout_constraintEnd_toStartOf="@id/price_icon"
                app:layout_constraintTop_toTopOf="@id/price_icon"
                app:priceText="@{nonMedicine.price}"
                tools:text="15000 تومان" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>